# airbnb-regulation

./: .gitignore  .gitmessage  Dockerfile  LICENSE  README.md  docker-compose.yml  logs  pyproject.toml  scrape_process.md  update_listing_spider.py
.github/workflows/: pipeline-prod.yml  pipeline.yml
airbnb_project/: docker-compose.yml  manage.py
airbnb_project/airbnb_project/: asgi.py  celery.py  constants.py  env_config.py  exceptions.py  settings.py  settings_test.py  urls.py  wsgi.py
airbnb_project/database/: Dockerfile  airbnb_db_creator.sql
airbnb_project/database/global/: 1260  pg_control  pg_internal.init
airbnb_project/database/pg_stat/: pgstat.stat
airbnb_project/listing_policy_results/: apps.py  listing_policy_result_models.py  models.py
airbnb_project/listing_processing/: apps.py
airbnb_project/listings/: README.md  listing_models.py  tasks.py  urls.py  views.py
airbnb_project/listings/harvester_app/: README.md  scrapy.cfg
airbnb_project/listings/migrations/: 0001_initial.py
airbnb_project/listings/tests/: test_database_pipeline.py  test_views.py
airbnb_project/policies/: README.md  models.py  policy_models.py  urls.py  views.py
airbnb_project/policies/migrations/: 0001_initial.py
airbnb_project/policies/models/: __init__.py  listing_policy_result_model.py  listing_policy_result_models.py  policy_client_models.py  policy_context_model.py  policy_model.py  policy_models.py  valid_registration_number_policy_model.py
airbnb_project/policies/policies/: issued_registration_number_policy.py  valid_registration_number_policy.py
airbnb_project/policies/services/: business_licence_client.py
docs/: pull_request_template.md
grafana docker/: Dockerfile  Dockerfile.grafana  docker-compose.yml  grafana.ini  init.sql
scripts/: setup_cron.sh
terraform/dev/: main.tf  variables.tf
terraform/prod/: main.tf  variables.tf
(+73 files in other folders)
