[tool.poetry]
name = "airbnb-regulation"
version = "0.1.0"
description = "This project aims to flag Airbnb listings that violates BC short-term rental policy."
authors = ["Nam, Mangat, Tony"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
requests = "^2.32.3"
ruff = "^0.5.6"
psycopg = {version = "^3.2.1", extras = ["binary", "pool"]}

[tool.poetry.group.dev.dependencies]
psycopg = "^3.1.19"
scrapy = "^2.11.2"
python-dotenv = "^1.0.1"
django = "^5.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
