[tool.poetry]
name = "airbnb-regulation"
version = "0.1.0"
description = "This project aims to flag Airbnb listings that violates BC short-term rental policy."
authors = ["Nam, Mangat, Tony"]
readme = "README.md"

[tool.poetry.dependencies]
django = "^5.0.6"
psycopg = {version = "^3.2.1", extras = ["binary", "pool"]}
python = "^3.10"
requests = "^2.32.3"
scrapy = "^2.11.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.6"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"